<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.loyaltyapp.OperatorActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeView"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/barcode_value"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical|center_horizontal"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:hint="@string/inactiveSwitchHint"
                    android:inputType="phone"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    app:srcCompat="@drawable/icon256"
                    android:id="@+id/qr_scanner_View"
                    android:layout_weight="1"
                    android:layout_height="50dp"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check_barcode_btn"
                android:text="@string/checkBarcodeBTN" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_customer_btn"
                android:text="@string/createCustomerBTN" />

            <Button
                android:text="@string/deleteCustomerBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delete_customer_btn" />

            <Button
                android:text="@string/createOperatorBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_operator_btn" />

            <Button
                android:text="@string/deleteOperatorBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delete_operator_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/db_btn"
                android:text="@string/databaseBTN" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
