<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_customer_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.loyaltyapp.CustomerCreation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@android:dimen/thumbnail_height"
                android:id="@+id/fields_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/customer_name_Text"
                    android:hint="@string/name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/customer_surname_Text"
                    android:hint="@string/surname" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/customer_phone_Text"
                    android:hint="@string/phone" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/customer_create_btn"
                    android:text="@string/createCustomerBTN" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jumpToLogin_btn"
                android:visibility="gone"
                android:text="@string/jumpToLoginBTN" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jumpToCheckBarcode_btn"
                android:visibility="gone"
                android:text="@string/jumpToCheckBarcode" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/customer_profile_layout"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_name_Text"
                    android:textSize="18sp"
                    android:text="@string/Hello" />

                <TextView
                    android:text="@string/yourBarcodeIs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_barcode_Text"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/profile_barcode"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:paddingTop="@dimen/activity_vertical_margin" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
