<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.loyaltyapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/loyalty_app"
            android:id="@+id/imageView" />

        <EditText android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_password"
            android:ems="10"
            android:focusable="true"
            android:hint="Barcode or phone"
            android:imeOptions="actionNext"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="textStart" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/operator_switch"
            android:text="@string/isOperator" />

        <EditText android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:imeOptions="actionDone"
            android:visibility="gone"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="textPassword"
            android:hint="Password"
            android:textAlignment="textStart" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_btn"
                android:text="@string/signupBTN"
                android:layout_weight="1"
                android:background="@drawable/myrect"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:textColor="@color/AppColor" />

            <Button android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_password"
                android:layout_alignRight="@+id/login_password"
                android:layout_below="@+id/login_password"
                android:textSize="14sp"
                android:text="@string/loginBTN"
                android:background="@drawable/myrect"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:textColor="@color/AppColor" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
